@@ -5,6 +5,12 @@
 	<controls>
 		
 		<!--background-->
+		<control type="image">
+			<include>dimensionsFullscreen</include>
+			<texture>colors/black.png</texture>
+			<colordiffuse>ffFFFFFF</colordiffuse>
+			<aspectratio>stretch</aspectratio>
+		</control>
 		<include>fanartSlides</include>
 		<control type="image">
 			<include>dimensionsFullscreen</include>
