@@ -42,7 +42,7 @@
 			</control>	
 					
 			<control type="multiimage">
-				<visible>!container.content(seasons) + !container.content(songs) + [!container.content(episodes) | Substring(Container.folderpath,plugin)] + [Container(9999).HasFiles | Container(9999).HasFolders]</visible>
+				<visible>!Skin.HasSetting(useGlobalBackground) + !container.content(seasons) + !container.content(songs) + [!container.content(episodes) | Substring(Container.folderpath,plugin)] + [Container(9999).HasFiles | Container(9999).HasFolders]</visible>
 				<posx>0</posx>
    				<posy>0</posy>
    				<include>dimensionsFullscreen</include>
@@ -57,6 +57,16 @@
 				<animation effect="fade" start="100" end="0" time="500">Windowclose</animation>				
 			</control>
 			
+			<control type="image">
+				<visible>Skin.HasSetting(useGlobalBackground) + !isempty(skin.string(globalBackground))</visible>
+				<include>dimensionsFullscreen</include>
+				<animation effect="fade" start="0" end="100" time="1000" delay="100">Windowopen</animation>		
+				<animation effect="fade" start="100" end="0" time="500">Windowclose</animation>
+				<texture>$INFO[skin.string(globalBackground)]</texture>
+				<colordiffuse>6affffff</colordiffuse>
+				<aspectratio>stretch</aspectratio>
+			</control>
+						
 			<control type="group">
 				<visible>container.content(seasons) | container.content(songs) | [container.content(episodes) + !Substring(Container.folderpath,iplayer)]</visible>
 				
@@ -81,11 +91,7 @@
 			
 			<control type="group">
 				<visible>window.isactive(2)</visible>
-				
-				<animation type="visible" reversible="false">
-		            <effect type="fade" start="0" end="100" time="500" delay="400"/>
-				</animation>
-				
+							
 				<control type="image">
 					<include>dimensionsFullscreen</include>
 					<texture>colors/black.png</texture>
@@ -95,6 +101,7 @@
 				
 				<control type="image">
 					<include>dimensionsFullscreen</include>
+					<animation effect="fade" start="0" end="100" time="1000" delay="100">Windowopen</animation>		
 					<texture>backgrounds/pictures.jpg</texture>
 					<colordiffuse>6affffff</colordiffuse>
 					<aspectratio>stretch</aspectratio>
@@ -116,6 +123,8 @@
 	<include name="fanartSlides">
 		
 		<control type="group">
+			<visible>!Skin.HasSetting(useGlobalBackground)</visible>
+			
 			<animation type="conditional" condition="true" loop="true">	
 				<effect type="fade" start="0" end="100" time="2000" delay="0" />
 				<effect type="zoom" center="auto" start="130" end="100" time="15000" />
@@ -157,6 +166,36 @@
 				<colordiffuse>ffffffff</colordiffuse>
 				<aspectratio>stretch</aspectratio>
 			</control>
+		</control>
+		
+		<control type="group">
+			<visible>Skin.HasSetting(useGlobalBackground) + !isempty(skin.string(globalBackground))</visible>
+			<animation effect="fade" start="0" end="100" time="1000">Windowopen</animation>		
+			<animation effect="fade" start="100" end="0" time="500">Windowclose</animation>
+			
+			<control type="image">
+				<posx>0</posx>
+				<posy>0</posy>
+				<include>dimensionsFullscreen</include>
+				<texture>colors/black.png</texture>
+				<colordiffuse>ffffffff</colordiffuse>
+				<aspectratio>stretch</aspectratio>
+			</control>
+			
+			<control type="image">
+				<include>dimensionsFullscreen</include>
+				<texture>$INFO[skin.string(globalBackground)]</texture>
+				<colordiffuse>6affffff</colordiffuse>
+				<aspectratio>stretch</aspectratio>
+			</control>
+			
+			<control type="image">
+				<include>dimensionsFullscreen</include>
+				<texture>backgrounds/vignette.png</texture>
+				<colordiffuse>ffffffff</colordiffuse>
+				<aspectratio>stretch</aspectratio>
+			</control>
+			
 		</control>
 			
 	</include>
