@@ -82,6 +82,22 @@
 				</control>
 				
 				<control type="button" id="1">
+					<description>Set global background</description>
+					<height>54</height>
+					<width>16-col</width>
+					<align>left</align>
+					<textoffsetx>12</textoffsetx>
+					<font>itemTitle</font>
+					<textcolor>white</textcolor>
+					<focusedcolor>black</focusedcolor>
+					<texturefocus>colors/white.png</texturefocus>
+					<label>30219</label>
+					<label2>$INFO[Skin.String(globalBackground)]</label2>
+					<onclick>Skin.SetImage(globalBackground)</onclick>
+					<textwidth>8-col</textwidth>
+				</control>
+				
+				<control type="button" id="2">
 					<description>Set movie fanart</description>
 					<height>54</height>
 					<width>16-col</width>
@@ -97,7 +113,7 @@
 					<textwidth>8-col</textwidth>
 				</control>
 				
-				<control type="button" id="2">
+				<control type="button" id="3">
 					<description>Set tvshow fanart</description>
 					<height>54</height>
 					<width>16-col</width>
@@ -113,7 +129,7 @@
 					<textwidth>8-col</textwidth>
 				</control>
 				
-				<control type="button" id="3">
+				<control type="button" id="4">
 					<description>Set music fanart</description>
 					<height>54</height>
 					<width>16-col</width>
@@ -129,7 +145,7 @@
 					<textwidth>8-col</textwidth>
 				</control>
 				
-				<control type="button" id="4">
+				<control type="button" id="5">
 					<description>Set game fanart</description>
 					<height>54</height>
 					<width>16-col</width>
@@ -143,6 +159,14 @@
 					<label2>$INFO[Skin.String(gameFanartLocation)]</label2>
 					<onclick>Skin.SetPath(gameFanartLocation)</onclick>
 					<textwidth>8-col</textwidth>
+				</control>
+				
+				<control type="radiobutton" id="6">
+					<description>Override fanart slider with a global custom background</description>
+					<width>16-col</width>
+					<label>30220</label>
+					<onclick>Skin.ToggleSetting(useGlobalBackground)</onclick>
+					<selected>Skin.HasSetting(useGlobalBackground)</selected>
 				</control>
 				
 				<control type="radiobutton" id="501">
