@@ -101,12 +101,14 @@
 	<string id="30210">Screen</string>	
 	<string id="30211">Watch now</string>	
 	<string id="30212">Record</string>	
-	<string id="30213">[UP] System Info</string>	
+	<string id="30213">(UP) System Info</string>	
 	<string id="30214">Music Files</string>	
 	<string id="30215">Now and Next</string>	
 	<string id="30216">Programme Guide</string>	
 	<string id="30217">Recordings</string>	
-	<string id="30218">[DOWN] Weather</string>	
+	<string id="30218">(DOWN) Weather</string>	
+	<string id="30219">Global background image: </string>
+	<string id="30220">Enable global background: </string>	
 
 	<string id="31034">Enable Debug Grid</string>
 	<string id="31035">Disable Debug Info</string>
